--- a/JavaScript/2024-01-25 02_promise.md
+++ b/JavaScript/2024-01-25 02_promise.md
@@ -76,4 +76,32 @@
 
 
 
+#### Promise()에서 반환된 응답을 .then() 메서드를 통해 아래의 [코드 4-2]와 같이 작성할 수 있다. 
+
+#### [코드 4-1]
+	const pr = new Promise ((resolve, reject) => {
+		setTimeout(() => {
+			resolve(‘OK’)
+		}, 3000)
+	});
+
+#### [코드 4-2]
+	pr.then(
+		// 이행되었을 때 (fulfilled) 실행
+		function(result) {
+			console.log(result + ‘ 가지러 가자.’);
+	},
+		// 거부되었을 때 (rejected) 실행
+		function(err) {
+			console.log(‘다시 주문해주세요..’);
+	}
+	);
+
+#### [결과 1]
+	OK 가지러 가자.
+
+#### [결과 2]
+	다시 주문해주세요..
+
+#### --> [코드 4-1]에서 비동기 작업이 성공적으로 완료되었을 경우 console에 [결과 1]이, <br/> [코드 4-2]에서 비동기 작업이 실패하였을 경우 console에 [결과 2]가 출력된다.
 
