Update and rename 2024-01-15 02_variables.md to 2024-01-15 03_variables.md

--- a/JavaScript/ES6/2024-01-15 03_variables.md
+++ b/JavaScript/ES6/2024-01-15 03_variables.md
@@ -1,9 +1,9 @@
-# Variables (ES6)
+# Variables
 <br/>
 
 ### 이 글의 목적
-    - ES6/2024-01-15 01_variables.md에서 let과 const 변수에 대해 학습하였다.
-    - 지난 글에서는 var을 무분별하게 사용하면 안 되는 이유에 대한 설명이 부족해 보여, 이 글로 해당 내용을 보충하고자 한다.
+    - ES6/2024-01-15 02_variables.md에서 지역 변수 let과 const 변수에 대해 학습하였다.
+    - 지난 글에서는 전역 변수 var을 무분별하게 사용하면 안 되는 이유에 대한 설명이 부족해 보여, 이 글로 해당 내용을 보충하고자 한다.
 <br/>
 
 #### [코드 1]은 var 변수를 무분별하기 사용하면 안 되는 코드의 예시이며, 이벤트 위임이 적용되지 않은 코드이다.
