Update and rename 2024-01-15 02_AJAX.md to 2024-01-16 01_AJAX.md

--- a/JavaScript/2024-01-16 01_AJAX.md
+++ b/JavaScript/2024-01-16 01_AJAX.md
@@ -4,3 +4,6 @@
 #### AJAX (Asynchronous Javascript and XML)
     - 비동기 통신.
     - 웹 페이지의 이동 없이 필요한 데이터만 전송하는 기술.
+<br/>
+
+#### 비동기 통신에 대해 학습하기 위해서는 동기 통신과 비교하여 개념을 익히는 것이 선행되어야 한다.
