--- a/JavaScript/JSON/2024-01-18 02_JSON.md
+++ b/JavaScript/JSON/2024-01-18 02_JSON.md
@@ -2,8 +2,16 @@
 <br/>
 
 ### JSON (JavaScript Object Notation)
-    - 데이터를 문자열로 나타내기 위해 사용되는 표기법.
+    - JavaScript 객체 문법으로 구조화된 데이터 교환 형식.
+    - 객체뿐만 아니라 단순 배열, 문자열도 표현 가능.
     - 현재는 데이터 표준으로 자리잡아 JavaScript뿐만 아니라 다른 언어에서도 지원되고 있다.
+<br/>
+
+### JavaScript 객체 문법
+#### 1. key와 value로 구성된다.
+```plaintext
+{key: value} 형식으로 쓰이며, 이미 존재하는 키를 중복으로 선언하면 나중에 선언한 해당 키에 대응한 값이 덮어쓰인다.
+```
 <br/>
 
 #### JavaScript에서는 JSON이라는 내장 객체를 지원하고 있다.
