--- a/JAVA/Data Structure/2024-01-30 02_queue.md
+++ b/JAVA/Data Structure/2024-01-30 02_queue.md
@@ -9,7 +9,16 @@
 - Queue 인터페이스의 구현 클래스이다.
 #### 사용 목적
 - Queue Interface의 구현 클래스가 ArrayList가 아니라 LinkedList인 이유에 대하여 알아보고자 한다.
+#### 1) ArrayList
+- ArrayList의 데이터들은 메모리 (RAM) 상에서 연속된 공간에 저장된다.
+- 무작위 접근 (Random Access) 및 순차적 접근 (Sequential Access) 모두 가능하다.
+#### 2) LinkedList
+- LinkedList의 데이터들은 메모리 상에서 불연속된 공간에 저장되며, 각각 데이터들을 링크시키기 위한 참조 변수가 추가로 할당된다.
+- 순차적 접근만 가능하다.
+- 맨 앞의 요소를 제거하는 것과 맨 뒤에 요소를 추가하는 것 자체의 시간 복잡도는 O(1)이지만, 중간에 있는 요소를 추가하거나 삭제하기 위해서는 길이가 N인 배열을 전부 탐색해야 하므로 시간 복잡도는 O(N)이 된다.
+
 <br/>
+
 
 ### 2. LinkedList Class 생성
 #### [코드 1]은 LinkedList 클래스를 사용한 예시이다.
