--- a/AWS/IAM/2024-02-26 02_IAM.md
+++ b/AWS/IAM/2024-02-26 02_IAM.md
@@ -8,3 +8,10 @@
 ### 1. IAM 정책 시뮬레이터
 - IAM과 관련된 문제들을 디버깅하기에 최적화된 툴이다.
 - 개발 환경에서 실제 환경으로 build하기 전 IAM 정책이 잘 작동되는지 테스트하기 위해 사용한다.
+#### 1) IAM - 사용자
+- [그림 1]과 같이 사용자를 만들 수 있다.
+![IMAGE](../images/users.png)
+
+#### 2) IAM - 그룹
+- [그림 2]와 같이 그룹을 만들 수 있다.
+![IMAGE](../images/groups.png)
